[package]
name = "solar-evse"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
enphase-local = "0.1.1"
eyre = "0.6.12"
reqwest = { version = "0.12.15", features = [ "json", "rustls-tls-webpki-roots", ], default-features = false }
rumqttc = { version = "0.24.0" }
serde_json = "1.0.140"
serde = {version ="1.0.219", features = ["derive"]}
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread"] }
